; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/lpfc/extr_lpfc_scsi.c_lpfc_sli4_set_rsp_sgl_last.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/lpfc/extr_lpfc_scsi.c_lpfc_sli4_set_rsp_sgl_last.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lpfc_hba = type { i32 }
%struct.lpfc_scsi_buf = type { i64 }
%struct.sli4_sge = type { i32 }

@lpfc_sli4_sge_last = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lpfc_hba*, %struct.lpfc_scsi_buf*)* @lpfc_sli4_set_rsp_sgl_last to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lpfc_sli4_set_rsp_sgl_last(%struct.lpfc_hba* %0, %struct.lpfc_scsi_buf* %1) #0 {
  %3 = alloca %struct.lpfc_hba*, align 8
  %4 = alloca %struct.lpfc_scsi_buf*, align 8
  %5 = alloca %struct.sli4_sge*, align 8
  store %struct.lpfc_hba* %0, %struct.lpfc_hba** %3, align 8
  store %struct.lpfc_scsi_buf* %1, %struct.lpfc_scsi_buf** %4, align 8
  %6 = load %struct.lpfc_scsi_buf*, %struct.lpfc_scsi_buf** %4, align 8
  %7 = getelementptr inbounds %struct.lpfc_scsi_buf, %struct.lpfc_scsi_buf* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = inttoptr i64 %8 to %struct.sli4_sge*
  store %struct.sli4_sge* %9, %struct.sli4_sge** %5, align 8
  %10 = load %struct.sli4_sge*, %struct.sli4_sge** %5, align 8
  %11 = icmp ne %struct.sli4_sge* %10, null
  br i1 %11, label %12, label %30

12:                                               ; preds = %2
  %13 = load %struct.sli4_sge*, %struct.sli4_sge** %5, align 8
  %14 = getelementptr inbounds %struct.sli4_sge, %struct.sli4_sge* %13, i64 1
  store %struct.sli4_sge* %14, %struct.sli4_sge** %5, align 8
  %15 = load %struct.sli4_sge*, %struct.sli4_sge** %5, align 8
  %16 = getelementptr inbounds %struct.sli4_sge, %struct.sli4_sge* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @le32_to_cpu(i32 %17)
  %19 = load %struct.sli4_sge*, %struct.sli4_sge** %5, align 8
  %20 = getelementptr inbounds %struct.sli4_sge, %struct.sli4_sge* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 4
  %21 = load i32, i32* @lpfc_sli4_sge_last, align 4
  %22 = load %struct.sli4_sge*, %struct.sli4_sge** %5, align 8
  %23 = call i32 @bf_set(i32 %21, %struct.sli4_sge* %22, i32 1)
  %24 = load %struct.sli4_sge*, %struct.sli4_sge** %5, align 8
  %25 = getelementptr inbounds %struct.sli4_sge, %struct.sli4_sge* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @cpu_to_le32(i32 %26)
  %28 = load %struct.sli4_sge*, %struct.sli4_sge** %5, align 8
  %29 = getelementptr inbounds %struct.sli4_sge, %struct.sli4_sge* %28, i32 0, i32 0
  store i32 %27, i32* %29, align 4
  br label %30

30:                                               ; preds = %12, %2
  ret void
}

declare dso_local i32 @le32_to_cpu(i32) #1

declare dso_local i32 @bf_set(i32, %struct.sli4_sge*, i32) #1

declare dso_local i32 @cpu_to_le32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
